# C_tarot

./: Makefile  README.md  configure
src/: CMakeLists.txt  Main.java  card.c  card_stack.c  main.c  main.cpp
src/headers/: card.h  card_stack.h  player.h
